# usiGrabber

./: .env.sample  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  MONITORING.md  README.md  compose.helix.yaml  compose.yaml  loki-config.yaml  profile_with_memray.sh  pyproject.toml  pyrightconfig.json  ruff.toml  sample_projects.json
.claude/skills/loki/: SKILL.md
.gemini/: settings.json
.github/workflows/: pytest.yml  type-check.yaml  type-check.yml
build_index/build_index/: drop_indices.sql  indices.sql
dashboards/: dashboard-db.json  error-dashboard.json
examples/: custom_analytics_pipeline.py
experimental/: analyze_mzid.py  check_indices.py  data_overview.ipynb  download_small_mzids.py  extract_mzid_entries.py  fetch_pride_files.py  fetch_pride_projects.py  import_mzid.py  import_pride_json.py  produce_usi.py  sampled_projects_log.csv  test_mzid_search_mod_parsing.py
grafana/: db_snapshot.sh
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
jobs/: build_big.sh  watchdog.sh
queries/: psms_with_phospho_mod.sql  psms_with_phospho_mod_simple.sql  psms_without_phospho_mod.sql  psms_without_phospho_mod_simple.sql
scripts/: compare_profiles.py
scripts/db/: switch_db.sh
scripts/setup_dev/: all.sh
slurm/modification-prediction/: download_spectra.sh
slurm/spectrum-toolkit/: download-raw-spectra.sh
src/mod_prediction/: README.md  db_fetcher.py  logging_config.py  mgf.py  models.py  parquet_to_mgf.py  parquet_utils.py  pride_fetcher.py  psm_to_parquet.py
src/mod_prediction/raw_to_psm/: download_raw_spectra.py  utils.py  worker.py
src/spectrum_toolkit/: README.md  db_fetcher.py  logging_config.py  mgf.py  models.py  parquet_to_mgf.py  parquet_utils.py
src/spectrum_toolkit/queries/: psms_example.sql  psms_with_phospho_mod.sql  psms_with_phospho_mod_simple.sql  psms_without_phospho_mod.sql  psms_without_phospho_mod_simple.sql
src/usigrabber/: README.md  __init__.py  __main__.py  download_all_files.py  http_client_demo.py  main.py  mzid.py  pride.py  test.ipynb  test.py  utils.py
src/usigrabber/backends/: base.py  (+3 more)
tests/: conftest.py  test_mzid_helpers.py  test_mzid_parser.py  test_parse_threshold_info.py  test_parsing_functions.py  test_temp.py
tests/cv_parameters/: conftest.py  test_cv_engine.py  test_instrument_cleaner.py
tests/db/: test_db.py
tests/file_parser/: conftest.py  test_import_file.py
tests/mzid/: conftest.py  test_mzid_helpers.py  test_mzid_parser.py  test_parsing_functions.py
tests/txt_zip/: conftest.py  test_txt_zip_helpers.py  test_txt_zip_parser.py  test_txt_zip_parsing_functions.py
tests/usi_validation/: test_validator.py
tests/utils/: test_file.py  test_uuid7.py
(+131 files in other folders)
