[project]
name = "usigrabber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "test-package",
]

[project.scripts]
usigrabber = "usigrabber:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/test-package",
]

[tool.uv.sources]
test-package = { workspace = true }

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "ruff>=0.14.1",
]
